# zig-gamedev

./: .gitattributes  .gitignore  .gitmodules  .ignore  .lfs-content-token  .vimrc  .zigversion  LICENSE  README.md  build.zig  build.zig.zon  build_all_samples.bat  build_all_samples_release.bat  clean_all_samples.bat  dev.build.zig.zon
.github/: FUNDING.yml
.github/workflows/: main.yml
emscripten/: entry.c  shell.html
emscripten/emsdk/: emsdk.bat
experiments/: build.zig
experiments/genart/: build.zig
libs/common/: GuiContext.zig  GuiRenderer.zig  audio.zig  build.zig  build.zig.zon  bullet.cpp  bullet.zig  c.zig  common.hlsl  common.zig  generate_mipmaps.hlsl  graphics.zig  imgui.hlsl  library.zig  pix.zig  pix3.zig  tracy.zig  vectormath.zig  zmath.zig
libs/mach-glfw/: build.zig
libs/mach-gpu/: build.zig
libs/mach-gpu-dawn/: build.zig
libs/mzwin/: d3d12.zig  d3d12sdklayers.zig  d3dcommon.zig  dxgi.zig  dxgi1_2.zig  dxgi1_3.zig  dxgi1_4.zig  dxgicommon.zig  dxgiformat.zig  dxgitype.zig  mzwin.zig
libs/system-sdk/: README.md  build.zig  build.zig.zon
libs/vectormath/: vectormath.zig
libs/win32/: README.md  audioclient.zig  audiosessiontypes.zig  d2d1.zig  d2d1_1.zig  d2d1_2.zig  d2d1_3.zig  d3d11.zig  d3d11on12.zig  d3d12.zig  d3d12sdklayers.zig  d3dcommon.zig  dcommon.zig  directml.zig  dwrite.zig  dxgi.zig  dxgi1_2.zig  dxgi1_3.zig  dxgi1_4.zig  dxgiformat.zig  dxgitype.zig  mf.zig  misc.zig  mmdeviceapi.zig  mmreg.zig  wasapi.zig  win32.zig  wincodec.zig  windows.zig  xapo.zig  xaudio2.zig  xaudio2fx.zig
libs/winsdk/: d3d12.zig  d3d12sdklayers.zig  dxgi.zig  dxgicommon.zig  misc.zig
libs/zaudio/: README.md  build.zig  build.zig.zon  system_sdk.zig
libs/zbullet/: README.md  build.zig  build.zig.zon
libs/zcgltf/: README.md  build.zig  build.zig.zon
libs/zd3d12/: README.md  build.zig  build.zig.zon  zd3d12.zig
libs/zems/: README.md  build.zig  dummy.zig  zems.zig
libs/zemscripten/: README.md  build.zig  build.zig.zon
libs/zenet/: README.md  build.zig
libs/zflecs/: README.md  build.zig  build.zig.zon
libs/zglfw/: README.md  build.zig  build.zig.zon  system_sdk.zig
libs/zgpu/: README.md  build-dawn.zig  build.zig  build.zig.zon
libs/zgui/: README.md  build.zig  build.zig.zon
libs/zjobs/: README.md  build.zig  build.zig.zon
libs/zjolt/: build.zig
libs/zmath/: README.md  build.zig  build.zig.zon  zmath.zig
libs/zmesh/: LICENSE  README.md  build.zig  build.zig.zon
libs/zminigl/: README.md  build.zig
libs/znetwork/: README.md  build.zig
libs/znfde/: README.md  build.zig  build.zig.zon
libs/znfde/nativefiledialog/src/: CMakeLists.txt  nfd_portal.cpp
libs/znoise/: README.md  build.zig  build.zig.zon
libs/zopengl/: README.md  build.zig  build.zig.zon
libs/zopenvr/: LICENSE  README.md  build.zig  build.zig.zon
libs/zphysics/: README.md  build.zig  build.zig.zon
libs/zpix/: README.md  build.zig  build.zig.zon  zpix.zig
libs/zpool/: README.md  build.zig  build.zig.zon
libs/zsdl/: LICENSE  README.md  build.zig  build.zig.zon
libs/zstbi/: README.md  build.zig  build.zig.zon
libs/zstbtt/: README.md  build.zig
libs/ztracy/: README.md  build.zig  build.zig.zon
libs/zwin32/: README.md  build.zig  build.zig.zon  d3dcommon.zig  directml.zig  dwrite.zig  misc.zig  wincodec.zig  xaudio2.zig  zwin32.zig
libs/zwindows/: README.md  build.zig  build.zig.zon
libs/zxaudio2/: README.md  build.zig  build.zig.zon  zxaudio2.zig
samples/: build.zig
samples/audio_experiments/: README.md  build.zig
samples/audio_experiments_wgpu/: README.md  build.zig
samples/audio_playback_test/: README.md  build.zig
samples/bindless/: README.md  build.zig
samples/bullet_physics_test/: README.md  build.zig  todo.txt
samples/bullet_physics_test_wgpu/: README.md  build.zig
samples/common/: build.zig
samples/directml_convolution_test/: README.md  build.zig
samples/directml_test/: build.zig
samples/frame_pacing_wgpu/: README.md  build.zig
samples/functional_style_wgpu/: README.md  build.zig
samples/gamepad_wgpu/: README.md  build.zig
samples/gui_test_wgpu/: README.md  build.zig
samples/imgui_test/: build.zig
samples/instanced_pills_wgpu/: README.md  build.zig
samples/intro/: README.md  build.zig
samples/layers_wgpu/: README.md  build.zig
samples/live_editing/: README.md  build.zig
samples/machine_learning_test/: README.md  build.zig
samples/mesh_shader_test/: README.md  build.zig
samples/minimal/: README.md  build.zig
samples/minimal_d3d12/: README.md  build.zig
samples/minimal_gl/: build.zig
samples/minimal_glfw_d3d12/: README.md  build.zig
samples/minimal_glfw_gl/: build.zig
samples/minimal_sdl/: build.zig
samples/minimal_sdl_gl/: build.zig
samples/minimal_zgpu_zgui/: README.md  build.zig
samples/minimal_zgui_glfw_d3d12/: README.md  build.zig
samples/minimal_zgui_glfw_gl/: README.md  build.zig
samples/minimal_zgui_win32_d3d12/: build.zig
samples/minimal_zgui_zd3d12/: README.md  build.zig
samples/monolith/: build.zig
samples/network_test/: build.zig
samples/opengl_test/: build.zig
src/: main.zig  triangle.zig
(+664 files in other folders)
